--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-backup": "^9.3",
-        "spatie/laravel-permission": "^6.21"
+        "spatie/laravel-permission": "^6.21",
+        "symfony/resend-mailer": "7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
