--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "phpoffice/phpword": "^1.3",
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-permission": "^6.21",
         "symfony/resend-mailer": "7.1"
